<resources>
    <string name="app_name">智慧交通</string>
    <string name="city_code">酒泉</string>
    <string name="km">km</string>


    <string name="index">首页</string>
    <string name="traffic">交通</string>
    <string name="server">服务</string>
    <string name="mine">我的</string>
    <string name="route">路线</string>
    <string name="aboard">上车地点</string>
    <string name="search_text">搜索公交线路、车站、地点</string>
    <string name="bus_title">实时公交</string>
    <string name="road_title">路况信息</string>
    <string name="stop_title">停车场</string>
    <string name="tweet_title">随手拍</string>
    <string name="my_collection">收藏</string>
    <string name="index_map">地图</string>

    <string name="notwork">施工中!!!!</string>
    <string name="locating">正在定位，请稍后...</string>
    <string name="bus_list">当前位置公交线路:</string>
    <string name="nonbusline">非常抱歉，当前未搜到您周围的公交站点信息！</string>
    <string name="locating_waiting">等待定位完成</string>
    <string name="waiting_busline">正在获取公交线路信息</string>
    <string name="busline_message">线路详情</string>
    <string name="loading">加载中...</string>
    <string name="route_calculate">路线规划</string>
    <string name="search">搜索</string>
    <string name="my_location">我的位置</string>
    <string name="input_from">输入起点</string>
    <string name="input_to">输入终点</string>
    <string name="test">测试</string>
    <string name="map_select">地图选点</string>
    <string name="dot">·</string>
    <string name="confirm">确定</string>
    <string name="no_traffic">该线路暂无交通信息!</string>
    <string name="cant_getaddress">无法获取该位置信息!</string>
    <string name="not_design">本站点尚未开通公交信息查询</string>
    <string name="same_line">同站线路</string>
    <string name="input_name">输入目的站</string>
    <string name="click_show">点击站点显示信息</string>
    <string name="loading_data">正在获取信息，请稍后...</string>
    <string name="route_detail">线路详情</string>
    <string name="scheme_1">方案1</string>
    <string name="scheme_2">方案2</string>
    <string name="scheme_3">方案3</string>
    <string name="scheme_4">方案4</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="login">点击登录</string>
    <string name="user_name">用户名:</string>
    <string name="key_user">请输入用户名</string>
    <string name="password">密码:</string>
    <string name="submit">登陆</string>
    <string name="regist">注册</string>
    <string name="logout">退出</string>
    <string name="key_password">请输入密码</string>
    <string name="confirm_pass">确认密码</string>
    <string name="pass_again">请重复密码</string>
    <string name="nick_name">昵称</string>
    <string name="key_nickname">请输入昵称</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>

    <string name="title_notice">通知公告</string>


    <string name="title_wzquery">违章查询</string>
    <string name="title_wzpayfee">违章缴费</string>
    <string name="title_njcheck">年检预约</string>
    <string name="title_carquery">车辆查询</string>
    <string name="title_jzquery">驾照查询</string>

    <string name="title_assist">道路救援</string>
    <string name="title_gongqiu">供求信息</string>
    <string name="title_domestic">家政服务</string>
    <string name="title_yellowpage">黄页电话</string>
    <string name="title_washcar">便捷洗车</string>
    <string name="title_lostfound">失物招领</string>

    <string name="title_mecenter">个人中心</string>
    <string name="title_history">历史记录</string>
    <string name="title_publish">信息发布</string>
    <string name="title_round">我的周边</string>
    <string name="title_collect">我的收藏</string>
    <string name="title_version">版本</string>
    <string name="title_setting">设置</string>

    <string name="title_usertitle">昵称</string>
    <string name="title_useraccount">帐号</string>
    <string name="title_password">修改密码</string>

    <!--  -->
    <string name="traffic_vedios">路况直播，点击观看.</string>
    <string name="traffic_data">交通指数</string>
    <string name="traffic_city">全市</string>
    <string name="traffic_shangquan">商圈</string>
    <string name="traffic_ganxian">干线</string>

    <string name="hint_smscode">验证码</string>
    <string name="hint_password">密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="hint_account">帐号</string>

    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>

    <string name="save">保存</string>

    <string name="error_invalid_account">帐号不合法</string>
    <string name="error_invalid_nickname">昵称不合法</string>
    <string name="error_invalid_password">密码长度过短</string>
    <string name="error_invalid_confirm_password">两次密码输入不匹配</string>
    <string name="error_invalid_smscode">验证码错误</string>
    <string name="error_field_required">此项为必填项</string>
    <string name="error_network">网络连接失败！</string>
    <string name="title_activity_user_info">资料卡</string>

    <string name="title_aboutus">关于我们</string>


    <!-- 合成 -->
    <string-array name="engine_entries">
        <item>本地合成</item>
        <item>在线合成</item>
    </string-array>
    <string-array name="engine_values">
        <item>local</item>
        <item>cloud</item>
    </string-array>
    <string-array name="voicer_cloud_entries">
        <item>小燕—女青、中英、普通话</item>
        <item>小宇—男青、中英、普通话</item>
        <item>凯瑟琳—女青、英</item>
        <item>亨利—男青、英</item>
        <item>玛丽—女青、英</item>
        <item>小研—女青、中英、普通话</item>
        <item>小琪—女青、中英、普通话</item>
        <item>小峰—男青、中英、普通话</item>
        <item>小梅—女青、中英、粤语</item>
        <item>小莉—女青、中英、台湾普通话</item>
        <item>小蓉—女青、中、四川话</item>
        <item>小芸—女青、中、东北话</item>
        <item>小坤—男青、中、河南话</item>
        <item>小强—男青、中、湖南话</item>
        <item>小莹—女青、中、陕西话</item>
        <item>小新—男童、中、普通话</item>
        <item>楠楠—女童、中、普通话</item>
        <item>老孙—男老、中、普通话</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>
    <string-array name="emot_entries">
        <item>正常</item>
        <item>高兴</item>
        <item>悲伤</item>
        <item>生气</item>
    </string-array>
    <string-array name="emot_values">
        <item>neutral</item>
        <item>happy</item>
        <item>sad</item>
        <item>angry</item>
    </string-array>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <!-- 语言 -->
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>河南话</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>henanese</item>
        <item>en_us</item>
    </string-array>
    <!-- 语音评测 -->
    <string name="text_en_word">"[word]\napple\nbanana\norange"</string>
    <string name="text_en_sentence">"The quick brown fox jumps over the lazy dog."</string>
    <string name="text_cn_syllable">"知，痴，是"</string>
    <string name="text_cn_word">"磁铁，率领，脆弱，动手，古筝"</string>
    <string name="text_cn_sentence">"一座座雪峰插入云霄，峰顶银光闪闪，大大小小的湖泊，像颗颗宝石镶嵌在彩带般的沟谷中。"</string>
    <string-array name="ise_language_entries">
        <item>英语</item>
        <item>汉语</item>
    </string-array>
    <string-array name="ise_language_values">
        <item>en_us</item>
        <item>zh_cn</item>
    </string-array>
    <string-array name="category_entries">
        <item>单字</item>
        <item>词语</item>
        <item>句子</item>
    </string-array>
    <string-array name="category_values">
        <item>read_syllable</item>
        <item>read_word</item>
        <item>read_sentence</item>
    </string-array>
    <string-array name="result_level_entries">
        <item>plain</item>
        <item>complete</item>
    </string-array>
    <!-- 标点符号 -->
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="dwa_entries">
        <item>开启</item>
        <item>关闭</item>
    </string-array>

    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="pref_title_iat_dwa">结果动态修正</string>

    <string name="tts_play">开始播放</string>
    <string name="tts_pause">暂停播放</string>
    <string name="tts_resume">继续播放</string>
    <string name="tts_cancel">取消播放</string>

    <string name="navigation_friends">朋友</string>
    <string name="navigation_msg">消息</string>
    <string name="navigation_tweets">动态</string>
    <string name="navigation_setting">设置</string>
    <string name="navigation_about">关于</string>
    <string name="navigation_exit">退出</string>
    <string name="navigation_plugin">插件</string>
    <string name="navigation_around">附近</string>


    <!-- 切换Fragment时的标题-->
    <string name="title_tweets">动态</string>
    <!--<string name="title_mine">我的</string>-->
    <string name="title_friends">朋友</string>
    <string name="title_message">消息</string>
    <string name="title_plugin">插件</string>
    <string name="title_about">关于</string>
    <string name="title_around">附近</string>


    <!-- Strings related to publish-->
    <string name="tweet_send">分享信息</string>
    <string name="tweet_send_success">发布成功</string>


    <string name="action_settings">Settings</string>
    <string name="list_mode_list">点我切换模式-列表模式</string>
    <string name="list_mode_stagger">点我切换模式-图片模式</string>
    <string name="list_menu">菜单栏todo</string>


    <string name="news">新闻</string>
    <string name="news_detail">新闻</string>

    <string name="newUpdateAvailable">发现新版本</string>
    <string name="dialogPositiveButton">立即下载</string>
    <string name="dialogNegativeButton">以后再说</string>
    <string name="app_no_new_update">没有发现新版本</string>
    <string name="download_progress">正在下载:%1$d%%</string>
    <string name="download_success">下载完成，点击安装</string>

    <string name="smoothlistview_header_hint_normal">下拉刷新</string>
    <string name="smoothlistview_header_hint_ready">松开刷新数据</string>
    <string name="smoothlistview_header_hint_loading">正在加载...</string>
    <string name="smoothlistview_header_last_time">上次更新时间：</string>
    <string name="smoothlistview_footer_hint_normal">查看更多</string>
    <string name="smoothlistview_footer_hint_ready">松开载入更多</string>

    <string name="title_comment">写评论</string>
    <string name="apk12123_pkg">com.tmri.app.main</string>
</resources>
