<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/login_bg">

   <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
       android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="酒泉智慧交通"
        android:textSize="36sp"
        android:gravity="center"
        android:textColor="@color/white"/>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:progressDrawable="@color/colorPrimary"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/general_margin"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >

            <LinearLayout
                android:id="@+id/username_signin_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white">

                <EditText
                    android:id="@+id/username_edit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/hint_account"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@color/login_text_bg"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/login_text_color"
                    android:textSize="@dimen/signin_text_size"
                    android:textColorHint="@color/login_text_color"/>


                <EditText
                    android:id="@+id/password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/hint_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@color/login_text_bg"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/login_text_color"
                    android:textSize="@dimen/signin_text_size"
                    android:textColorHint="@color/login_text_color"/>

                <!--</android.support.design.widget.TextInputLayout>-->

            </LinearLayout>

            <LinearLayout
                android:id="@+id/username_signup_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/password_confirm_edit"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/hint_confirm_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:background="@color/login_text_bg"
                        android:layout_marginBottom="10dp"
                        android:paddingStart="10dp"
                        android:textColor="@color/login_text_color"
                        android:textSize="@dimen/signin_text_size"
                        android:textColorHint="@color/login_text_color"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/smscode_edit"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0.7"
                        android:hint="@string/hint_smscode"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:background="@color/login_text_bg"
                        android:paddingStart="10dp"
                        android:textColor="@color/login_text_color"
                        android:textSize="@dimen/signin_text_size"
                        android:textColorHint="@color/login_text_color"/>
                    <Button
                        android:id="@+id/smscode_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="验证码"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/sign_commit_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="5dp"
                android:text="@string/action_sign_up"
                android:textStyle="bold"
                android:background="@drawable/signin_button_bg"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/sign_change_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="5dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="@color/white"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
