<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true">
    <!--Toolbar-->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>
    <!--<FrameLayout
        android:id="@+id/frame_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    </FrameLayout>-->
    <!--DrawerLayout-->
    <!--<include layout="@layout/menu_footer_view" />-->
    <!--主布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <FrameLayout
            android:id="@+id/frame_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10.6">
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blue_bg"
            />
        <LinearLayout
            android:padding="5dp"
            android:background="@color/white_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:background="@drawable/alpha_button"
                android:id="@+id/index"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/index_image"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:src="@drawable/index"
                    android:layout_weight="7"
                    />
                <TextView
                    android:gravity="center"
                    android:id="@+id/index_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:text="@string/index"
                    android:textColor="@color/text_default"
                    android:textSize="12sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/server"
                android:background="@drawable/alpha_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/server_image"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:src="@drawable/server"
                    android:layout_weight="7"
                    />
                <TextView
                    android:gravity="center"
                    android:id="@+id/server_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:text="@string/server"
                    android:textColor="@color/text_default"
                    android:textSize="12sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mine"
                android:background="@drawable/alpha_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/mine_image"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:src="@drawable/mine"
                    android:layout_weight="7"
                    />
                <TextView
                    android:gravity="center"
                    android:id="@+id/mine_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:text="@string/mine"
                    android:textColor="@color/text_default"
                    android:textSize="12sp"
                    android:typeface="normal" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>