<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--  天气、路况 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:background="@drawable/index_head_bg">
        <TextView
            android:id="@+id/local_weather"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="多云|0°"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/local_traffic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="交通指数(点击)"
            android:textColor="@color/white" />
    </LinearLayout>

    <!-- 热点应用 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/white">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="7dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        >
                        <!-- 公交-->
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/icon_bus" />

                        <!-- 路况-->
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/icon_traffic" />

                        <!-- 停车-->
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/icon_stop"
                            />
                        <!-- 周边-->
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/icon_tweet"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/bus_title"
                            android:textSize="14sp"
                            android:typeface="normal"
                            />
                        <TextView
                            android:gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/road_title"
                            android:textSize="14sp"
                            />
                        <TextView
                            android:gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/stop_title"
                            android:textSize="14sp"
                            />
                        <TextView
                            android:gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/tweet_title"
                            android:textSize="14sp"
                            />
                    </LinearLayout>
                </LinearLayout>

                <!-- 按钮-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageButton
                        android:id="@+id/index_bus"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:onClick="openBusView"
                        />
                    <ImageButton
                        android:id="@+id/index_road"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:onClick="openRoadView"
                        />
                    <ImageButton
                        android:id="@+id/index_stop"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:onClick="openStopView"
                        />

                    <ImageButton
                        android:id="@+id/index_tweet"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:onClick="openTweetView"
                        />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

    <!-- 通知公告-->
    <LinearLayout
        android:id="@+id/radio_list_view"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:textColor="@color/orange"
            android:textSize="20dp"
            android:text="通知公告"
            />
        <com.sunfusheng.marqueeview.MarqueeView
            android:id="@+id/marqueeView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:mvAnimDuration="1000"
            app:mvInterval="3000"
            app:mvTextColor="@color/primary"
            app:mvTextSize="14sp"
            app:mvSingleLine="true"/>
    </LinearLayout>

    <!-- -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/busline_bg" />

    <LinearLayout
            android:id="@+id/main_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white_text"
            android:visibility="visible">
            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/refresh_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.gsccs.smart.view.ArticleRecyclerView
                    android:id="@+id/article_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="LinearLayoutManager" />
            </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>
</LinearLayout>
